src/test/ui/parser/recover-const-async-fn-ptr.stderr
error: an `fn` pointer type cannot be `async`
  --> $DIR/recover-const-async-fn-ptr.rs:3:11
   |
LL | type T3 = async fn();
   |           -----^^^^^
   |           |
   |           `async` because of this
   |           help: remove the `async` qualifier

error: an `fn` pointer type cannot be `async`
  --> $DIR/recover-const-async-fn-ptr.rs:4:11
   |
LL | type T4 = async extern fn();
   |           -----^^^^^^^^^^^^
   |           |
   |           `async` because of this
   |           help: remove the `async` qualifier

error: an `fn` pointer type cannot be `async`
  --> $DIR/recover-const-async-fn-ptr.rs:5:11
   |
LL | type T5 = async unsafe extern "C" fn();
   |           -----^^^^^^^^^^^^^^^^^^^^^^^
   |           |
   |           `async` because of this
   |           help: remove the `async` qualifier

error: an `fn` pointer type cannot be `async`
  --> $DIR/recover-const-async-fn-ptr.rs:7:12
   |
LL | type FT3 = for<'a> async fn();
   |            ^^^^^^^^-----^^^^^
   |                    |
   |                    `async` because of this
   |                    help: remove the `async` qualifier

error: an `fn` pointer type cannot be `async`
  --> $DIR/recover-const-async-fn-ptr.rs:8:12
   |
LL | type FT4 = for<'a> async extern fn();
   |            ^^^^^^^^-----^^^^^^^^^^^^
   |                    |
   |                    `async` because of this
   |                    help: remove the `async` qualifier

error: an `fn` pointer type cannot be `async`
  --> $DIR/recover-const-async-fn-ptr.rs:9:12
   |
LL | type FT5 = for<'a> async unsafe extern "C" fn();
   |            ^^^^^^^^-----^^^^^^^^^^^^^^^^^^^^^^^
   |                    |
   |                    `async` because of this
   |                    help: remove the `async` qualifier

error[E0308]: mismatched types
  --> $DIR/recover-const-async-fn-ptr.rs:12:33
   |
LL |     let _recovery_witness: () = 0;
   |                            --   ^ expected `()`, found integer
   |                            |
   |                            expected due to this

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0308`.
